rate and quantity fields added

--- a/apps/web/src/styles/newStyles/project_abstractAdd.module.scss
+++ b/apps/web/src/styles/newStyles/project_abstractAdd.module.scss
@@ -51,3 +51,10 @@
     flex-direction: column;
     justify-content: flex-end;
 }
+
+.total_budget {
+    display:flex;
+    align-items: center;
+    justify-content: start;
+    padding-right: 1rem;
+}
