--- a/apps/web/src/styles.scss
+++ b/apps/web/src/styles.scss
@@ -55,6 +55,10 @@ body {
   --primary-color: #175cd3;
   --secondary-color: #7f56d9;
   --danger-color: #fef3f2;
+
+  /* table color*/
+  --tableHeader-fontColor: #2e2e30;
+  --tableHeader-backgroundColor: #d5d5d7;
 }
 
 .globaltabledata {
