--- a/apps/web/src/styles/projectlist.module.scss
+++ b/apps/web/src/styles/projectlist.module.scss
@@ -115,34 +115,38 @@
   gap: 12px;
   border-collapse: collapse;
 
-  // th,
-  // td {
-  //   padding: 5px 10px 5px 24px; /* Adjust padding */
-  //   text-align: left;
-  //   font-weight: 500;
-  //   // border: 0px 0px 1px;
-  //   font-size: 12px;
-  //   border: none; /* Remove borders */
-  //   border-bottom: 0.1px solid #f0f0f0;
-  // }
+  th,
+  td {
+    padding: 5px 10px 5px 24px; /* Adjust padding */
+    text-align: left;
+    font-weight: 500;
+    // border: 0px 0px 1px;
+    font-size: 12px;
+    border: none; /* Remove borders */
+    border-bottom: 0.1px solid #f0f0f0;
+  }
 
-  // td {
-  //   border-bottom: 0.1px solid #f0f0f0;
-  //   // border-bottom :0px, 0px, 1px, 0px
-  // }
+  td {
+    border-bottom: 0.1px solid #f0f0f0;
+  }
 
-  // thead {
-  //   tr {
-  //     th {
-  //       color: #667085;
-  //       font-weight: 700;
-  //     }
-  //   }
-  // }
-  // td:hover,
-  // tr:hover {
-  //   /* Add hover styles if needed */
-  // }
+  thead {
+    tr {
+      th {
+        padding: 10px 10px 10px 24px;
+        color: var(--tableHeader-fontColor);
+        font-size: 13px;
+        font-weight: 600;
+        background-color: var(--tableHeader-backgroundColor);
+        border: none;
+        text-transform: uppercase;
+      }
+    }
+  }
+  td:hover,
+  tr:hover {
+    /* Add hover styles if needed */
+  }
 }
 
 .completedStatus {
