Table header UI fixed

--- a/apps/web/src/styles/newStyles/projectStockManagement.module.scss
+++ b/apps/web/src/styles/newStyles/projectStockManagement.module.scss
@@ -25,6 +25,10 @@
     align-items: center;
 }
 
+.tableContainer {
+    padding: 12px;
+}
+
 .scrollable_table {
     width: 100%;
     height: 100%;
@@ -51,12 +55,17 @@
 
     thead {
         tr {
-            th {
-                color: #667085;
-                font-weight: 700;
-            }
+          th {
+            padding: 10px 10px 10px 24px;
+            color: var(--tableHeader-fontColor);
+            font-size: 13px;
+            font-weight: 600;
+            background-color: var(--tableHeader-backgroundColor);
+            border: none;
+            text-transform: uppercase;
+          }
         }
-    }
+      }
 }
 
 .emptyDataHandling {
