--- a/apps/web/src/styles/stockOutwardList.module.scss
+++ b/apps/web/src/styles/stockOutwardList.module.scss
@@ -53,8 +53,13 @@
   thead {
     tr {
       th {
-        color: #667085;
-        font-weight: 700;
+        padding: 10px 10px 10px 24px;
+        color: var(--tableHeader-fontColor);
+        font-size: 13px;
+        font-weight: 600;
+        background-color: var(--tableHeader-backgroundColor);
+        border: none;
+        text-transform: uppercase;
       }
     }
   }
