--- a/apps/web/src/styles/gstList.module.scss
+++ b/apps/web/src/styles/gstList.module.scss
@@ -74,8 +74,8 @@
 }
 
 .scrollable_table {
-  width: 100%;
-  height: 100%;
+  width: 40%;
+  height: 200px;
   padding: 10px 10px;
   /* Adjust padding */
   gap: 12px;
@@ -102,8 +102,13 @@
   thead {
     tr {
       th {
-        color: #667085;
-        font-weight: 700;
+        padding: 10px 10px 10px 24px;
+        color: var(--tableHeader-fontColor);
+        font-size: 13px;
+        font-weight: 600;
+        background-color: var(--tableHeader-backgroundColor);
+        border: none;
+        text-transform: uppercase;
       }
     }
   }
