--- a/apps/web/src/styles/indentList.module.scss
+++ b/apps/web/src/styles/indentList.module.scss
@@ -72,7 +72,7 @@
 }
 
 .tableContainer {
-  padding: 10px 10px 0px 10px;
+  padding: 20px 10px 0px 10px;
   // height: 100vh;
   display: flex;
   flex-direction: column;
@@ -133,8 +133,13 @@
   thead {
     tr {
       th {
-        color: #667085;
-        font-weight: 700;
+        padding: 10px 10px 10px 24px;
+        color: var(--tableHeader-fontColor);
+        font-size: 13px;
+        font-weight: 600;
+        background-color: var(--tableHeader-backgroundColor);
+        border: none;
+        text-transform: uppercase;
       }
     }
   }
