--- a/apps/web/src/styles/projectInventory.module.scss
+++ b/apps/web/src/styles/projectInventory.module.scss
@@ -11,12 +11,13 @@
     border-top: 1px solid #ccc;
     margin-bottom: 10px;
 }
-// .tableContainer {
+.tableContainer {
+  padding: 10px;
 //     padding: 10px 40px 60px 40px;
 //     display: flex;
 //     flex-direction: column;
 //     gap: 20px;
-// }
+}
 // table {
 //     border-collapse: collapse;
 //     width: 100%;
@@ -83,11 +84,17 @@ th,
   thead {
     tr {
       th {
-        color: #667085;
-        font-weight: 700;
+        padding: 10px 10px 10px 24px;
+        color: var(--tableHeader-fontColor);
+        font-size: 13px;
+        font-weight: 600;
+        background-color: var(--tableHeader-backgroundColor);
+        border: none;
+        text-transform: uppercase;
       }
     }
   }
+  
   td:hover,
   tr:hover {
     /* Add hover styles if needed */
