--- a/apps/web/src/styles/projectMasterDataAdd.module.scss
+++ b/apps/web/src/styles/projectMasterDataAdd.module.scss
@@ -20,6 +20,14 @@
   align-items: center;
 }
 
+.tableContainer {
+  padding: 20px 10px 0px 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+
 .scrollable_table {
   width: 100%;
   height: 100%;
@@ -47,11 +55,18 @@
   thead {
     tr {
       th {
-        color: #667085;
-        font-weight: 700;
+        padding: 10px 10px 10px 24px;
+        color: var(--tableHeader-fontColor);
+        font-size: 13px;
+        font-weight: 600;
+        background-color: var(--tableHeader-backgroundColor);
+        border: none;
+        text-transform: uppercase;
       }
     }
   }
+
+
 }
 
 .container {
