Changes in site claims view and new instant item add page

--- a/apps/web/src/styles/expenseApprove.module.scss
+++ b/apps/web/src/styles/expenseApprove.module.scss
@@ -302,3 +302,9 @@
   justify-content: flex-end;
   padding: 10px 10px 0px 0px;
 }
+.propCancel {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  padding-top: 250px;
+}
