--- a/apps/web/src/styles/newStyles/bomlist.module.scss
+++ b/apps/web/src/styles/newStyles/bomlist.module.scss
@@ -32,7 +32,7 @@
 .mainContainer {
   background-color: rgb(255, 255, 255);
   width: 80%;
-  padding: 5px;
+  padding: 5px 2rem;
 }
 
 .side_menu {
