--- a/apps/web/src/styles/newStyles/bomlist.module.scss
+++ b/apps/web/src/styles/newStyles/bomlist.module.scss
@@ -374,6 +374,7 @@
     font-size: 12px;
     border: none; /* Remove borders */
     border-bottom: 0.1px solid #f0f0f0;
+
   }
 
   td {
@@ -388,6 +389,21 @@
       }
     }
   }
+
+    //odd keyword  
+    tbody{
+      tr:nth-child(odd) {  
+        // background: red;  
+        background-color: #faf7f7;  
+      }  
+      //even keyword  
+      tr:nth-child(even) {  
+       
+        // opacity: .7;
+        // color: black;
+      } 
+    }
+
 }
 .actionIcons_container{
   display: flex;
