--- a/apps/web/src/styles/newStyles/projectSiteExpense.module.scss
+++ b/apps/web/src/styles/newStyles/projectSiteExpense.module.scss
@@ -21,6 +21,9 @@
 .table_container {
   padding: 10px;
   margin: 0 auto;
+  max-width: 1050px;
+  overflow-x: scroll;
+  // overflow-y: visible;
   &::-webkit-scrollbar {
     width: 0px;
     background: transparent;
@@ -31,8 +34,7 @@
   padding: 10px 10px;
   gap: 5px;
   border-collapse: collapse;
-  width:100%;
-
+  width: 100%;
   th,
   td {
     padding: 5px 10px 10px 10px;
@@ -155,7 +157,7 @@
   font-size: 0.75rem;
 }
 
-.totalBudget{
+.totalBudget {
   // background-color: #b42318;
   display: flex;
   justify-content: flex-end;
@@ -163,18 +165,18 @@
   padding-bottom: 10px;
 }
 
-.documentErr{
+.documentErr {
   color: black;
   font-size: 0.75rem;
 }
 
-.billNumberErr{
+.billNumberErr {
   color: red;
   font-size: 0.7rem;
   // padding-top: 10px;
   // background-color: #667085;
 }
-.expCode{
+.expCode {
   display: flex;
   flex-direction: row;
   padding-left: 15px;
@@ -182,7 +184,7 @@
   gap: 4px;
 }
 
-.header{
+.header {
   display: 'flex';
   flex-direction: 'row';
   // align-items: 'center';
@@ -191,27 +193,27 @@
 }
 
 .content_container_left {
-display: flex;
-flex-direction: column;
-justify-content:space-evenly;
-gap: 10px;
-// font-weight: bold;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  gap: 10px;
+  // font-weight: bold;
 }
 
 .content_container {
-display: flex;
-flex-direction: row;
-justify-content: flex-start;
-gap: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  gap: 20px;
 }
 
-.buttons{
+.buttons {
   display: flex;
   flex-direction: row;
   align-items: center;
   gap: 10px;
 }
-.addNewRowView{
+.addNewRowView {
   display: flex;
   justify-content: center;
   padding-top: 130px;
@@ -220,6 +222,6 @@ gap: 20px;
   gap: 2px;
 }
 
-.spanContent{
+.spanContent {
   font-size: 0.8rem;
 }
