Expense Reverse implemented

--- a/apps/web/src/styles/newStyles/expenseRecall.module.scss
+++ b/apps/web/src/styles/newStyles/expenseRecall.module.scss
@@ -46,6 +46,13 @@
     color: #c11574;
 }
 
+.rejectedStatus {
+    background-color: #fffaeb;
+    padding: 4px;
+    border-radius: 35px;
+    color: #b54708;
+  }
+
 .emptyDataHandling {
     display: flex;
     flex-direction: column;
