--- a/apps/web/src/styles/listItem.module.scss
+++ b/apps/web/src/styles/listItem.module.scss
@@ -95,9 +95,9 @@ display: flex;
   td {
     padding: 5px 10px 5px 24px; /* Adjust padding */
     text-align: left;
-    font-weight: 500;
     // border: 0px 0px 1px;
-    font-size: 12px;
+    font-weight: var(--tableData-fontWeight);
+    font-size: var(--tableData-fontSize);
     border: none; /* Remove borders */
     border-bottom: 0.1px solid #f0f0f0;
   }
@@ -112,11 +112,11 @@ display: flex;
       th {
         padding: 10px 10px 10px 24px;
         color: var(--tableHeader-fontColor);
-        font-size: 13px;
-        font-weight: 600;
         background-color: var(--tableHeader-backgroundColor);
         border: none;
-        text-transform: uppercase;
+        font-size: var(--tableHeader-fontSize);
+        font-weight: var(--tableHeader-fontWeight);
+        text-transform: var(--tableHeader-textTransform);
       }
     }
   }
