--- a/apps/web/src/styles/project.module.scss
+++ b/apps/web/src/styles/project.module.scss
@@ -208,13 +208,10 @@
   th,
   td {
     padding: 10px 10px 10px 24px;
-    /* Adjust padding */
     text-align: left;
-    font-weight: 500;
-    // border: 0px 0px 1px;
-    font-size: 12px;
     border: none;
-    /* Remove borders */
+    font-weight: var(--tableData-fontWeight);
+    font-size: var(--tableData-fontSize);
     border-bottom: 0.1px solid #f0f0f0;
   }
 
@@ -228,11 +225,11 @@
       th {
         padding: 10px 10px 10px 24px;
         color: var(--tableHeader-fontColor);
-        font-size: 13px;
-        font-weight: 600;
         background-color: var(--tableHeader-backgroundColor);
         border: none;
-        text-transform: uppercase;
+        font-size: var(--tableHeader-fontSize);
+        font-weight: var(--tableHeader-fontWeight);
+        text-transform: var(--tableHeader-textTransform);      
       }
     }
   }
