--- a/apps/web/src/styles/projectWorkBreakDownList.module.scss
+++ b/apps/web/src/styles/projectWorkBreakDownList.module.scss
@@ -116,11 +116,11 @@
     padding: 5px 10px 5px 24px;
     /* Adjust padding */
     text-align: left;
-    font-weight: 500;
     // border: 0px 0px 1px;
-    font-size: 12px;
     border: none;
     /* Remove borders */
+    font-weight: var(--tableData-fontWeight);
+    font-size: var(--tableData-fontSize);
     border-bottom: 0.1px solid #f0f0f0;
   }
 
@@ -134,11 +134,11 @@
       th {
         padding: 10px 10px 10px 24px;
         color: var(--tableHeader-fontColor);
-        font-size: 13px;
-        font-weight: 600;
         background-color: var(--tableHeader-backgroundColor);
         border: none;
-        text-transform: uppercase;
+        font-size: var(--tableHeader-fontSize);
+        font-weight: var(--tableHeader-fontWeight);
+        text-transform: var(--tableHeader-textTransform);
       }
     }
   }
