--- a/apps/web/src/styles/userList.module.scss
+++ b/apps/web/src/styles/userList.module.scss
@@ -41,9 +41,9 @@
   td {
     padding: 5px 10px 5px 24px; /* Adjust padding */
     text-align: left;
-    font-weight: 500;
     // border: 0px 0px 1px;
-    font-size: 12px;
+    font-weight: var(--tableData-fontWeight);
+    font-size: var(--tableData-fontSize);
     border: none;
     /* Remove borders */
     border-bottom: 0.1px solid #f0f0f0;
@@ -59,11 +59,12 @@
       th {
         padding: 10px 10px 10px 24px;
         color: var(--tableHeader-fontColor);
-        font-size: 13px;
-        font-weight: 600;
         background-color: var(--tableHeader-backgroundColor);
+        font-size: var(--tableHeader-fontSize);
+        font-weight: var(--tableHeader-fontWeight);
+        text-transform: var(--tableHeader-textTransform);
+
         border: none;
-        text-transform: uppercase;
       }
     }
   }
