--- a/apps/web/src/styles/purchaseRequestAdd.module.scss
+++ b/apps/web/src/styles/purchaseRequestAdd.module.scss
@@ -52,10 +52,11 @@
 
 .fields_container_1 {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: flex-start;
   width: 100%;
   padding-bottom: 5px;
+  gap: 20px;
 }
 
 .fields_container_2 {
