--- a/apps/web/src/styles/newStyles/bomlist.module.scss
+++ b/apps/web/src/styles/newStyles/bomlist.module.scss
@@ -408,8 +408,9 @@
 .actionIcons_container{
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   gap: 10px;
+  min-width: 5rem;
 }
 .selectedRow {
   background-color: #e7e7e7;
