--- a/apps/web/src/styles/newStyles/projectStockManagement.module.scss
+++ b/apps/web/src/styles/newStyles/projectStockManagement.module.scss
@@ -23,7 +23,8 @@
     flex-direction: row;
     gap: 3px;
     align-items: center;
-}
+    padding: 0px 10px;
+  }
 
 .tableContainer {
     padding: 12px;
