--- a/apps/web/src/styles/newStyles/siteExpenseList.module.scss
+++ b/apps/web/src/styles/newStyles/siteExpenseList.module.scss
@@ -170,8 +170,9 @@
 .subHeading {
   display: flex;
   flex-direction: row;
-  gap: 7px;
+  gap: 8px;
   align-items: center;
+  padding: 8px 11px;
 }
 
 .emptyDataHandling {
@@ -180,6 +181,7 @@
   justify-content: center;
   align-items: center;
   gap: 2px;
+  padding-top: 3px;
 }
 
 .textmin {
