--- a/apps/web/src/styles/project.module.scss
+++ b/apps/web/src/styles/project.module.scss
@@ -543,13 +543,6 @@
   gap: 10px;
 }
 
-.subHeading {
-  display: flex;
-  flex-direction: row;
-  gap: 7px;
-  align-items: center;
-}
-
 .heading {
   display: flex;
   flex-direction: row;
@@ -621,8 +614,9 @@
 .subHeading {
   display: flex;
   flex-direction: row;
-  gap: 7px;
+  gap: 8px;
   align-items: center;
+  padding: 0px 0px;
 }
 
 .emptyDataHandling {
@@ -631,6 +625,7 @@
   justify-content: center;
   align-items: center;
   gap: 2px;
+  padding-top: 22px;
 }
 
 .textmin {
