--- a/apps/web/src/styles/projectMasterDataAdd.module.scss
+++ b/apps/web/src/styles/projectMasterDataAdd.module.scss
@@ -13,11 +13,18 @@
   align-items: center;
 }
 
+.imageAdd {
+  display: flex;
+  justify-content: center;
+}
+
+
 .subHeading {
   display: flex;
   flex-direction: row;
-  gap: 3px;
+  gap: 7px;
   align-items: center;
+  padding: 1px 10px;
 }
 
 .tableContainer {
@@ -79,16 +86,19 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-top: 28px;
 }
 
-.emptyButton {
-  margin-top: 25px;
-}
-
-.spanContent {
+.textmin {
+  padding: 12px;
   font-weight: 400;
+  font-size: 14px;
 }
 
+.textmax {
+  font-weight: 700;
+  font-size: 16px;
+}
 .iconStyle {
   display: flex;
   flex-direction: row;
