--- a/apps/web/src/styles/projectSettings.module.scss
+++ b/apps/web/src/styles/projectSettings.module.scss
@@ -32,8 +32,9 @@
 .subHeading {
   display: flex;
   flex-direction: row;
-  gap: 7px;
+  gap: 8px;
   align-items: center;
+  padding: 2px 10px;
 }
 
 .emptyDataHandling {
@@ -45,7 +46,7 @@
 }
 
 .textmin {
-  padding: 10px;
+  padding: 11px;
   font-weight: 400;
   font-size: 14px;
 }
