--- a/apps/web/src/styles/stockOutwardList.module.scss
+++ b/apps/web/src/styles/stockOutwardList.module.scss
@@ -20,6 +20,15 @@
   display: flex;
   flex-direction: row;
   gap: 10px;
+  padding-left: 10px;
+}
+
+.subHeading {
+  display: flex;
+  flex-direction: row;
+  gap: 8px;
+  align-items: center;
+  padding: 0px 10px;
 }
 
 .content {
@@ -136,6 +145,7 @@
   flex-direction: column;
   gap: 10px;
   align-items: center;
+  padding-top: 10px;
 }
 
 .emptyButton {
