--- a/apps/web/src/styles.scss
+++ b/apps/web/src/styles.scss
@@ -4,6 +4,7 @@ body {
   padding: 0;
   // font-family: 'Arial', sans-serif;
   font-family: 'Inter', sans-serif;
+  // overflow-y: hidden;
 }
 
 // styles.scss
