Filter in masterdata and expense detail status change

--- a/apps/web/src/styles/expenseApprove.module.scss
+++ b/apps/web/src/styles/expenseApprove.module.scss
@@ -143,8 +143,17 @@
 
 .button {
   display: flex;
-  justify-content: flex-end;
+  flex-direction: column ;
+  align-items: flex-end ;
   padding: 0% 3% 1.5% 0%;
+}
+
+.message {
+  font-size: 10px;
+}
+
+.symbol {
+  color: red;
 }
 
 .approvedStatus {
