--- a/apps/web/src/styles/masterdata.module.scss
+++ b/apps/web/src/styles/masterdata.module.scss
@@ -317,3 +317,10 @@
   margin-top: 25px;
 }
 
+.filterOptions{
+  display: flex;
+  justify-content: flex-end;
+  gap: 20px;
+  padding-right: 10px;
+}
+
