--- a/apps/web/src/styles/newStyles/expenseRecall.module.scss
+++ b/apps/web/src/styles/newStyles/expenseRecall.module.scss
@@ -17,11 +17,10 @@
     width: 100%;
     height: 100%;
     padding: 10px 10px;
-    /* Adjust padding */
     gap: 12px;
     border-collapse: collapse;
 
-    // th,
+    th,
     td {
         padding: 10px 10px 10px 24px;
         text-align: left;
