--- a/apps/web/src/styles/purchaseView.module.scss
+++ b/apps/web/src/styles/purchaseView.module.scss
@@ -56,18 +56,17 @@
 }
 
 .tableContainer {
-  padding: 0px 0px 0px 0px;
+  padding: 0px 20px 0px 20px;
   display: flex;
   flex-direction: column;
   gap: 10px;
-  margin: 0 auto;
   height:392px;
   overflow-y: scroll;
   width: 100%;
 }
 
 .scrollable_table {
-    width: 100%;
+    width: 98%;
     // height: 100px;
     padding: 10px 10px; /* Adjust padding */
     gap: 12px;
@@ -102,19 +101,22 @@
       }
     }
   .tableHeadingOne{
-  width:10px;
+  width:5px;
   }
   .tableHeadingTwo{
     width:5px;
     }
     .tableHeadingThree{
-      width: 100px;
+      width: 570px;
+      // background-color: #027a48;
     }
     .tableHeadingFour{
-      width: 15px;
+      width: 80px;
+      // background-color: #848289;
     }
     .tableHeadingFive{
-      width: 15px;
+      width: 5px;
+      // background-color: red;
     }
   }
 
