--- a/apps/web/src/styles/projectBomConfig.module.scss
+++ b/apps/web/src/styles/projectBomConfig.module.scss
@@ -645,6 +645,10 @@
     font-size: 16px;
   }
   
+  .emptyButton {
+    padding-top: 4px;
+  }
+
   .image {
     display: flex;
     justify-content: center;
