--- a/apps/web/src/styles/stockOutwardList.module.scss
+++ b/apps/web/src/styles/stockOutwardList.module.scss
@@ -145,13 +145,24 @@
   flex-direction: column;
   gap: 10px;
   align-items: center;
-  padding-top: 10px;
+  padding-top: 3px;
 }
 
 .emptyButton {
-  margin-top: 15px;
+  margin-top: 4px;
 }
 
 .spanContent {
   font-weight: 300;
+}
+
+.textmin {
+  padding: 3px;
+  font-weight: 400;
+  font-size: 14px;
+}
+
+.textmax {
+  font-weight: 700;
+  font-size: 16px;
 }
