--- a/apps/web/src/styles/listItem.module.scss
+++ b/apps/web/src/styles/listItem.module.scss
@@ -84,6 +84,13 @@ display: flex;
   justify-content: flex-end;
 }
 
+.tableContainer {
+  padding: 2px 10px 5px 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
 .scrollable_table {
   width: 100%;
   height: 100%;
@@ -132,7 +139,7 @@ display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  padding-bottom: 10px;
+  padding: 0px 10px 10px 10px;
 }
 
 .heading {
@@ -153,6 +160,11 @@ display: flex;
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-top: 30px;
+}
+
+.contentGap {
+  padding: 8px;
 }
 
 .spanContent {
@@ -160,11 +172,12 @@ display: flex;
 }
 
 .emptyButton {
-  margin-top: 25px;
+  padding-top: 4px;
 }
 
 .filters {
   display: flex;
   gap: 20px;
-  padding: 10px;
+  padding-left: 10px;
+  transform: translateY(18%);
 }
