--- a/apps/web/src/styles/machinery.module.scss
+++ b/apps/web/src/styles/machinery.module.scss
@@ -99,10 +99,10 @@
 }
 
 .tableContainer {
-    // padding: 10px;
-    display: flex;
-    flex-direction: column;
-    // gap: 20px;
+  padding: 3px 10px 5px 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
 // table {
@@ -150,7 +150,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    padding-bottom: 25px;
+    padding: 0px 10px 10px 10px;
   }
   
   .heading {
@@ -181,6 +181,11 @@
     justify-content: center;
     align-items: center;
     gap: 2px;
+    padding-top: 50px;
+  }
+
+  .contentGap {
+    padding: 10px;
   }
   
   .textmin {
@@ -240,5 +245,6 @@
   .filters {
     display: flex;
     gap: 20px;
-    padding: 15px;
-  }
+    padding-left: 10px;
+    transform: translateY(18%);
+    }
