--- a/apps/web/src/styles/masterdata.module.scss
+++ b/apps/web/src/styles/masterdata.module.scss
@@ -7,7 +7,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  padding: 10px 0px 10px 10px;
+  padding: 10px 10px 10px 10px;
   gap: 20px;
 }
 
@@ -74,7 +74,7 @@
 }
 
 .tableContainer {
-  padding: 10px 10px 5px 10px;
+  padding: 2px 10px 5px 10px;
   display: flex;
   flex-direction: column;
   gap: 20px;
@@ -281,6 +281,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+  padding: 0px 10px 10px 10px;
 }
 
 .heading {
@@ -298,7 +299,8 @@
 }
 
 .searchBar {
-  padding: 5px 15px 0
+  padding-left: 10px;
+  transform: translateY(18%);
 }
 
 //For initial page
