--- a/apps/web/src/styles/newStyles/projectIndentList.module.scss
+++ b/apps/web/src/styles/newStyles/projectIndentList.module.scss
@@ -116,14 +116,14 @@
 }
 
 .tableContainer {
-  // padding: 10px;
+  padding: 12px 10px ;
   width: 100%;
   // height: 100%;
   // overflow-x: auto;
   // overflow-y: none;
   /* Adjust the maximum width as needed */
   // max-height: 550px;
-  margin: 2rem auto;
+  margin: 0rem auto;
 
   &::-webkit-scrollbar {
     width: 0px;
@@ -414,6 +414,14 @@
   flex-direction: row;
   gap: 8px;
   align-items: center;
+  padding: 0px 15px 0px 10px;
+}
+
+.subHeadingForInitialPage {
+  display: flex;
+  flex-direction: row;
+  gap: 8px;
+  align-items: center;
   padding: 9px 10px;
 }
 
@@ -429,26 +437,19 @@
 .headingOne {
   display: flex;
   flex-direction: row;
-  gap: 10px;
+  gap: 12px;
 }
 .searchBar {
-//   background-color: red;
   display: flex;
-  align-items: center;
-  align-self: center;
-  align-content: center;
-  justify-content: center;
-  justify-items: center;
-  justify-self: center;
-  padding-top: 17px;
+  transform: translateY(15%);
 }
-.topHeading {
-  // background-color: aqua;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-}
+// .topHeading {
+//   background-color: aqua;
+//   display: flex;
+//   flex-direction: row;
+//   align-items: center;
+//   justify-content: space-between;
+// }
 
 .iconStyle {
   display: flex;
@@ -503,13 +504,6 @@
   color: var(--secondary-color);
 }
 
-.subHeading {
-  display: flex;
-  flex-direction: row;
-  gap: 7px;
-  align-items: center;
-}
-
 .emptyDataHandling {
   display: flex;
   flex-direction: column;
@@ -528,6 +522,10 @@
 .textmax {
   font-weight: 700;
   font-size: 16px;
+}
+
+.emptyButton {
+  padding-top: 5px;
 }
 
 .image {
