--- a/apps/web/src/styles/projectSettings.module.scss
+++ b/apps/web/src/styles/projectSettings.module.scss
@@ -20,6 +20,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+  padding-right: 10px;
 }
 
 .heading {
@@ -54,6 +55,10 @@
 .textmax {
   font-weight: 700;
   font-size: 16px;
+}
+
+.emptyButton {
+  padding-top: 4px;
 }
 
 .overlay {
