--- a/apps/web/src/styles/projectSiteConfig.module.scss
+++ b/apps/web/src/styles/projectSiteConfig.module.scss
@@ -117,14 +117,14 @@
   }
   
   .tableContainer {
-    // padding: 10px;
+    padding: 0px 10px;
     width: 100%;
     // height: 100%;
     // overflow-x: auto;
     // overflow-y: none;
     /* Adjust the maximum width as needed */
     // max-height: 550px;
-    margin: 2rem auto;
+    margin: 1.3rem auto;
   
     &::-webkit-scrollbar {
       width: 0px;
@@ -548,6 +548,7 @@
     flex-direction: row;
     gap: 15px;
     align-items: center;
+    padding-top: 10px;
   }
   
   .topHeading {
@@ -556,6 +557,8 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+    // padding: 12px 8px 0px 8px;
+
   }
   
   .iconStyle {
@@ -606,6 +609,10 @@
     flex-direction: row;
     gap: 10px;
   }
+
+  .emptyButton {
+    padding-top: 5px;
+  }
   
   .sitelabel {
     color: var(--secondary-color);
@@ -616,8 +623,18 @@
     flex-direction: row;
     gap: 8px;
     align-items: center;
-    padding: 12px 8px;
+    padding: 1px 10px;
   }
+
+  .subHeadingForInitialPage {
+    display: flex;
+    flex-direction: row;
+    gap: 8px;
+    align-items: center;
+    padding: 10px 8px;
+  }
+
+
   
   .emptyDataHandling {
     display: flex;
@@ -625,6 +642,7 @@
     justify-content: center;
     align-items: center;
     gap: 2px;
+    padding-top: 2px;
   }
   
   .textmin {
