--- a/apps/web/src/styles/projectWorkBreakDownList.module.scss
+++ b/apps/web/src/styles/projectWorkBreakDownList.module.scss
@@ -71,7 +71,7 @@
 }
 
 .tableContainer {
-  padding: 10px;
+  padding: 3px 10px 5px 10px;
   display: flex;
   flex-direction: column;
   gap: 5px;
@@ -154,7 +154,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  padding-bottom: 15px;
+  padding: 0px 10px 10px 10px;
 }
 
 .heading {
@@ -175,6 +175,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-top: 40px;
+}
+.contentGap {
+  padding: 10px;
 }
 
 .spanContent {
@@ -186,5 +190,6 @@
 }
 
 .searchBar {
-  padding: 5px 15px 0
+  padding-left: 10px;
+  transform: translateY(18%);
 }
