--- a/apps/web/src/styles/vendor.module.scss
+++ b/apps/web/src/styles/vendor.module.scss
@@ -119,7 +119,7 @@
 }
 
 .tableContainer {
-  padding: 10px;
+  padding: 0px 10px 5px 10px;
   display: flex;
   flex-direction: column;
   gap: 20px;
@@ -186,7 +186,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  padding: 10px 10px 15px 10px;
+  padding: 3px 10px 15px 10px;
 }
 
 .heading {
@@ -199,9 +199,9 @@
 .subHeading {
   display: flex;
   flex-direction: row;
-  gap: 7px;
+  gap: 3px;
   align-items: center;
-  padding-left: 10px;
+  padding-top: 5px;
 }
 
 .emptyDataHandling {
@@ -210,12 +210,11 @@
   justify-content: center;
   align-items: center;
   gap: 2px;
-  padding-top: 55px;
+  padding-top: 75px;
 }
 
-
-.emptyButton {
-  margin-top: 25px;
+.contentGap {
+  padding: 10px;
 }
 
 .spanContent {
@@ -236,5 +235,6 @@
 .filters {
   display: flex;
   gap: 20px;
-  padding-top: 5px;
+  padding-left: 10px;
+  transform: translateY(18%);
 }
