--- a/apps/web/src/styles/newStyles/projectIndentList.module.scss
+++ b/apps/web/src/styles/newStyles/projectIndentList.module.scss
@@ -177,7 +177,7 @@
     // border-bottom :0px, 0px, 1px, 0px
   }
 
-    thead {
+  thead {
     tr {
       th {
         padding: 10px 10px 10px 24px;
@@ -186,7 +186,7 @@
         border: none;
         font-size: var(--tableHeader-fontSize);
         font-weight: var(--tableHeader-fontWeight);
-        text-transform: var(--tableHeader-textTransform);      
+        text-transform: var(--tableHeader-textTransform);
       }
     }
   }
@@ -422,7 +422,7 @@
   flex-direction: row;
   gap: 15px;
   align-items: center;
-//   background-color: lawngreen;
+  //   background-color: lawngreen;
   justify-content: space-between;
   width: 100%;
 }
@@ -432,9 +432,9 @@
   gap: 10px;
 }
 .searchBar {
-//   background-color: red;
+  //   background-color: red;
   display: flex;
-  align-items: center;
+  // align-items: center;
   align-self: center;
   align-content: center;
   justify-content: center;
@@ -583,4 +583,21 @@
 
 .mainContentEmptyData {
   // background-color: #667085;
+}
+
+.Colps {
+  display: flex;
+  gap: 20px;
+}
+.ColpsheadingpanelOne {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  text-transform: uppercase;
+  font-weight: 600;
+}
+.ColpsDatapanelOne {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
