--- a/apps/web/src/styles/masterdata.module.scss
+++ b/apps/web/src/styles/masterdata.module.scss
@@ -324,3 +324,10 @@
   padding-right: 10px;
 }
 
+.headingRow {
+  display: flex;
+  flex-direction: row;
+  justify-content: left;
+  align-items: center;
+}
+
