--- a/apps/web/src/styles/newStyles/deliveryAddNote.module.scss
+++ b/apps/web/src/styles/newStyles/deliveryAddNote.module.scss
@@ -5,6 +5,10 @@
     // background-color: #6941c6;
   }
 
+  .sub_header {
+    height: 10vh;
+    display: flex;
+  }
   .orderDetails{
     display: flex;
     flex-direction: row;
@@ -75,66 +79,7 @@
     border-left: 0.5px dashed #000; /* Adjust the color and thickness as needed */
   }
   
-  
-  .tableContainer {
-    // background-color: white;
-    // width:100%;
-    padding-top: 15px;
-    padding-right: 25px;
-    padding-left: 25px;
-    display: flex;
-    justify-content: center;
-  }
-  
-  /* Apply the scrollable_table class to your table element */
-  .scrollable_table {
-    width: 100%;
-    height: 100%;
-    padding: 10px 20px 10px 20px;
-    gap: 12px;
-    border-collapse: collapse;
-  
-    th,
-    td {
-      padding: 10px 10px 10px 24px;
-      text-align: left;
-      border: none;
-      font-weight: var(--tableData-fontWeight);
-      font-size: var(--tableData-fontSize);
-      border-bottom: 0.1px solid #f0f0f0;
-    }
-  
-    td {
-      border-bottom: 0.1px solid #f0f0f0;
-      // border-bottom :0px, 0px, 1px, 0px
-    }
-  
-    thead {
-      tr {
-        th {
-          padding: 10px 10px 10px 24px;
-          color: var(--tableHeader-fontColor);
-          background-color: var(--tableHeader-backgroundColor);
-          border: none;
-          font-size: var(--tableHeader-fontSize);
-          font-weight: var(--tableHeader-fontWeight);
-          text-transform: var(--tableHeader-textTransform);      
-        }
-      }
-    }
-  
-    td:hover,
-    tr:hover {
-      /* Add hover styles if needed */
-    }
-  }
-  
-
-  .sub_header {
-    height: 10vh;
-    display: flex;
-  }
-  
+    
   .logo {
     font-weight: bold;
     font-size: 16px;
@@ -166,9 +111,58 @@
     border-bottom: 1px solid black;
     padding-bottom: 5px;
   }
-  .addDeliveryBtn{
+  .saveBtn{
     display: flex;
     justify-content: flex-end;
     padding-right: 25px;
     padding-top: 10px;
+  }
+.tableContainer {
+    padding: 10px 27px 0px 27px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
+  
+.scrollable_table {
+    width: 100%;
+    height: 100%;
+    padding: 10px 10px;
+    /* Adjust padding */
+    gap: 12px;
+    border-collapse: collapse;
+  
+    th,
+    td {
+      padding: 5px 5px 5px 24px;
+      text-align: left;
+      font-weight: var(--tableData-fontWeight);
+      font-size: var(--tableData-fontSize);
+      border: none;
+      border-bottom: 0.1px solid #f0f0f0;
+    }
+  
+    td {
+      border-bottom: 0.1px solid #f0f0f0;
+      // border-bottom :0px, 0px, 1px, 0px
+    }
+  
+    thead {
+      tr {
+        th {
+          padding: 10px 10px 10px 24px;
+          color: var(--tableHeader-fontColor);
+          font-size: var(--tableHeader-fontSize);
+          font-weight: var(--tableHeader-fontWeight);
+          text-transform: var(--tableHeader-textTransform);
+          background-color: var(--tableHeader-backgroundColor);
+          border: none;
+        }
+      }
+    }
+  
+    td:hover,
+    tr:hover {
+      /* Add hover styles if needed */
+    }
   }
