--- a/apps/web/src/styles/newStyles/purchaseRequest.module.scss
+++ b/apps/web/src/styles/newStyles/purchaseRequest.module.scss
@@ -73,6 +73,8 @@
   height: 20%;
   border-radius: 8px;
   padding: 20px;
+  padding-top: 2px;
+  padding-bottom: 2px;
   background-color: #ffffff;
 }
 .cardpanelOne {
@@ -88,7 +90,10 @@
 .cardpanelThree {
   display: flex;
   justify-content: flex-end;
+  align-items: center;
   gap: 10px;
+  text-decoration: underline var(--secondary-color);
+  color: var(--secondary-color);
 }
 .panelContent {
   display: flex;
@@ -120,7 +125,7 @@
   padding-top: 0;
   border-radius: 50px;
   color: #027a48;
-  text-decoration: underline;
+  // text-decoration: underline;
 }
 .inprogressStatus {
   // background-color: #fdf2fa;
@@ -129,7 +134,7 @@
   padding-top: 0;
   border-radius: 50px;
   color: #c11574;
-  text-decoration: underline;
+  // text-decoration: underline;
 }
 
 .vendorPanel {
@@ -158,4 +163,7 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
+}
+.hyperLinks {
+  color: var(--primary-color);
 }
