--- a/apps/web/src/styles/home.module.scss
+++ b/apps/web/src/styles/home.module.scss
@@ -32,7 +32,6 @@
   min-width: max-content;
   padding: 0 30px;
   gap: 18px;
-
 }
 
 .homeLeftContent h2 {
@@ -57,14 +56,11 @@
   justify-content: center;
   padding: 0 50px;
   gap: 18px;
-
-
 }
 
 .homeRightContent p {
   font-size: 16px;
   font-weight: 500;
-
 }
 
 .homeRightContent h1 {
@@ -75,7 +71,6 @@
 .homeRightContent h2 {
   font-size: 16px;
   font-weight: 700;
-
 }
 
 .shortcutsContainer {
@@ -90,7 +85,6 @@
   display: flex;
   justify-content: flex-start;
   padding: 10px 60px;
-
 }
 
 .items {
@@ -118,13 +112,11 @@
 .reportItems {
   padding: 0 40px 0 60px;
   border-right: 1px solid black;
-
 }
 
 .reportItemsEnd {
   padding: 0 40px 0 60px;
 }
-
 
 .reportHeading {
   font-size: 24px;
@@ -206,8 +198,7 @@
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   width: 60%;
   border-radius: 10px;
-  background-color: #ECFDF3;
-
+  background-color: #ecfdf3;
 }
 
 .cardContainer:hover {
@@ -223,14 +214,12 @@
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   width: 20%;
   border-radius: 10px;
-  background-color: #F9F5FF;
-
+  background-color: #f9f5ff;
 }
 
 .cardContainer1:hover {
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
-
 
 .cardContainer2 {
   padding: 15px 10px;
@@ -241,7 +230,7 @@
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   width: 20%;
   border-radius: 10px;
-  background-color: #D1FADF;
+  background-color: #d1fadf;
 }
 
 .cardContainer2:hover {
@@ -253,7 +242,6 @@
   flex-direction: column;
 }
 
-
 .barCarddDiv {
   display: flex;
   justify-content: flex-start;
@@ -261,32 +249,28 @@
   gap: 30px;
 }
 
-
 .card2 {
   display: flex;
   flex-direction: column;
 }
 
 .textStyle1 {
-  font-weight: "bold";
+  font-weight: 'bold';
   font-size: 20px;
   margin-right: 85px;
 }
 
 .textStyle2 {
-  font-weight: "bold";
+  font-weight: 'bold';
   font-size: 20px;
   margin-right: 35px;
 }
 
 .textStyle3 {
-  font-weight: "bold";
+  font-weight: 'bold';
   font-size: 20px;
   margin-right: 20px;
 }
-
-
-
 
 .cardDiv {
   display: flex;
@@ -326,11 +310,10 @@
   justify-content: center;
   align-items: center;
 }
-.projectPayment{
+.projectPayment {
   color: red;
   opacity: 0.7;
 }
-
 
 .projectDiv3 {
   // width: 30%;
@@ -405,7 +388,6 @@
   justify-content: space-around;
 }
 
-
 .centerFirst {
   display: flex;
   flex-direction: row;
@@ -428,4 +410,7 @@
 
 .dashedLine {
   border-left: 0.5px dashed #000; /* Adjust the color and thickness as needed */
+}
+.headTitle {
+  text-transform: uppercase;
 }
