--- a/apps/web/src/styles/newStyles/purchaseRequest.module.scss
+++ b/apps/web/src/styles/newStyles/purchaseRequest.module.scss
@@ -5,7 +5,7 @@
   padding: 10px 10px 0px 10px;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: flex-end;
   gap: 10px;
 }
 
@@ -136,6 +136,15 @@
   color: #c11574;
   // text-decoration: underline;
 }
+.rejectedStatus {
+  // background-color: #fdf2fa;
+  // padding: 6px;
+  padding-left: 0;
+  padding-top: 0;
+  border-radius: 50px;
+  color: #b01111;
+  // text-decoration: underline;
+}
 
 .vendorPanel {
   display: flex;
@@ -166,4 +175,59 @@
 }
 .hyperLinks {
   color: var(--primary-color);
+}
+
+.sub_header {
+  height: 10vh;
+  display: flex;
+  justify-content: space-between;
+}
+
+.lineStyles {
+  padding: 8px;
+  display: flex;
+}
+
+.vertical {
+  position: relative;
+}
+
+.verticalLine::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 1.5px;
+  /* Adjust the width of the line */
+  background-color: #7a7676;
+  /* Adjust the color as needed */
+  height: 100%;
+}
+
+.textContent_1 {
+  display: flex;
+  flex-direction: column;
+}
+
+.projectTitle {
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 18px;
+  letter-spacing: 0em;
+  text-align: left;
+  margin-right: -70px;
+}
+
+.selected {
+  position: relative;
+}
+
+.selected::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 1px;
+  background-color: #d0d5dd;
 }
