--- a/apps/web/src/styles/vendorSelect.module.scss
+++ b/apps/web/src/styles/vendorSelect.module.scss
@@ -369,6 +369,15 @@
   color: #c11574;
   cursor: pointer;
 }
+.rejectedStatus {
+  background-color: #fdf2fa;
+  padding: 6px;
+
+  border-radius: 50px;
+  color: #b01111;
+  // text-decoration: underline;
+}
+
 .dashedLine {
   border-left: 0.5px dashed #000; /* Adjust the color and thickness as needed */
 }
