--- a/apps/web/src/styles/newStyles/myorderView.module.scss
+++ b/apps/web/src/styles/newStyles/myorderView.module.scss
@@ -75,6 +75,9 @@
     border-left: 0.5px dashed #000; /* Adjust the color and thickness as needed */
   }
   
+  .tableHeadingTwo {
+    width: 55%;
+  }
   
   .tableContainer {
     // background-color: white;
