--- a/apps/web/src/styles/newStyles/purchaseRequest.module.scss
+++ b/apps/web/src/styles/newStyles/purchaseRequest.module.scss
@@ -125,7 +125,7 @@
   padding-top: 0;
   border-radius: 50px;
   color: #027a48;
-  // text-decoration: underline;
+  text-decoration: underline;
 }
 .inprogressStatus {
   // background-color: #fdf2fa;
@@ -134,7 +134,7 @@
   padding-top: 0;
   border-radius: 50px;
   color: #c11574;
-  // text-decoration: underline;
+  text-decoration: underline;
 }
 .rejectedStatus {
   // background-color: #fdf2fa;
@@ -143,7 +143,7 @@
   padding-top: 0;
   border-radius: 50px;
   color: #b01111;
-  // text-decoration: underline;
+  text-decoration: underline;
 }
 
 .vendorPanel {
@@ -174,6 +174,12 @@
   gap: 10px;
 }
 .hyperLinks {
+  color: var(--primary-color);
+}
+.vendorLinks {
+  display: flex;
+  gap: 10px;
+  text-decoration: underline;
   color: var(--primary-color);
 }
 
