--- a/apps/web/src/styles/newStyles/deliveryAddNote.module.scss
+++ b/apps/web/src/styles/newStyles/deliveryAddNote.module.scss
@@ -175,4 +175,40 @@
     display: flex;
     flex-direction: row;
     gap:25px;
+    justify-content: space-between;
+    align-items: center;
+    padding-right: 25px;
+  }
+
+  .inputContainer{
+    display: flex;
+    flex-direction: row;
+    gap:25px;
+  }
+
+  .inputFieldTextArea{
+    padding-top: 10px;
+    padding-left: 26px;
+    display: flex;
+    flex-direction: row;
+    gap:25px;
+  }
+
+  .purchaseOrderDetails{
+    display: flex;
+    flex-direction: row;
+    gap: 8px;
+    // background-color: rebeccapurple;
+    padding-bottom: 15px;
+  }
+
+  .leftPurchaseOrderDetail{
+    display: flex;
+    flex-direction: column;
+    row-gap: 10px;
+  }
+  .righPurchasetOrderDetail{
+    display: flex;
+    flex-direction: column;
+    row-gap: 10px;
   }
