--- a/apps/web/src/styles/newStyles/bomlist.module.scss
+++ b/apps/web/src/styles/newStyles/bomlist.module.scss
@@ -68,6 +68,11 @@
         }
       }
   }
+
+  &::-webkit-scrollbar {
+  width: auto !important; /* Set the width back to the default (usually 'auto' or 'auto!important') */
+  background: auto !important; /* Set the background back to the default (usually 'auto' or 'auto!important') */
+}
 }
  
 .flex{
